# hackathon-ai-shopping-concierge

./: .env.example  .gitignore  README.md  app.py  chainlit.md  main.py  pyproject.toml
extension/: package-lock.json  package.json
extension/config/: webpack.config.js
extension/public/: manifest.json  sidepanel.html  sidepanel.js
realtime/: __init__.py  admin_panel.py  tools.py  virtual_try_on.py  virtual_try_on_cache.py  vision.py
realtime/product_search/: base.py  tools.py
scripts/: populate_index.py
store/: .eslintrc.json  README.md  package-lock.json  package.json
store/components/: account-menu.js  footer.js  header.js  layout.js
store/components/account/: favorite-product.js
store/components/checkout/: checkout-stepper.js  review-cart-item.js
store/components/product/: product-grid-card.js  product-simple-card.js  product-simple-horizontal.js
store/components/shopping-cart/: cart-item-row.js  cart-item.js  pricing-card.js
store/lib/: product.js
store/pages/: _app.js  index.js
store/pages/auth/: forgot-password.js  login.js  sign-up.js
store/pages/checkout/: checkout-success.js  confirm-checkout.js  delivery-info.js  payment-info.js
store/pages/explore/: index.js
store/pages/product/: [id].js
store/styles/: bootstrap-custom.css  bootstrap-custom.css.map
