[tool.poetry]
name = "ai-shopping-concierge"
version = "0.1.0"
description = ""
authors = ["Yushi Homma <hommayushi3@gmail.com>"]
readme = "README.md"
packages = [
    { include = "realtime", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"
chainlit = "1.3.0rc1"
openai = "*"
yfinance = "*"
plotly = "*"
websockets = "^13.1"
pillow = "^10.4.0"
litellm = "^1.48.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
